        
    commit# 16.4.11
        Date 13 April
        ==css optimize project ==
            -replace px and rem basis in font-size and repalce with percentage
            -use relative and absolute font-size (small, smaller etc)
        ==design enhancement ==
            - pagination design
            - widget design
            - entry-header transform: none (better readability)
        -Remove H1 from TinyMCE so users are discouraged from breaking headings hierarchy.
            
    commit# 16.4.12
        Date 15 April
        ==bug== tinyMCE editor HTML and graphic tabs not worked: scripts loaded not async deffered when admin See #16.4.4
        ==accessibility== redefine tinyMCEblockformats. Support followings: p, h2, h3, pre and blockquote.
        ==accessiblilty== add correct translation to headings (instead of kiemelés)
        ==upload css.min
    
    commit #16.4.13
        Date: 22 April
        ==test before upload to repository ==
            - correct content-date position fixings (still not good enough)
            -create minify css. This is set as default, and the unminified is the style.original.css
            -screenshot update (a new has Hungarian content)
        ==code validation process==
            -remove unnecessary role attributes
            -delete searchform.php, which can be called many times in one page. Now header has its own form, widget will use WP standard searchform. 
        
version 16.5
    
    Oaron dd. 24 April (w/o number)
        - removed duplicate complementary, added region role to the widgets
     commit #16.5.2
        ==speed booster == delete gmpg and pingback direct html from header.php
    Oaron dd. 24 Apr.
        ==coding standard == use home() instead of get_site_url()
    commit # 16.5.4
        - add image list to sitepmap
        - change font awesome to verion 4.6.0 (included new accessiblilty icons)
        -header: delete gmpg and pingback links.