@@ -69,15 +69,11 @@
 	
 	
 		<div class="breadrcumb" id="breadcrumb" aria-label="<?php _e( 'Breadcrumb navigation', 'manduca'); ?>" role="navigation">	
-			<?php
-				if ( function_exists( 'yoast_breadcrumb' ) ) { //if YoastSeo is installed
-					yoast_breadcrumb( '<p>', '</p>');
-				}
-				else {
-					manduca_breadcrumb();
-
-				} ?>
+	
+			<?php manduca_breadcrumb(); } ?>
+		
 		</div>
-	</div>
+	
+</div>
 
 	<div id="wrapper" class="wrapper" tabindex="-1">
