@@ -199,3 +199,11 @@ version 16.5
         - add image list to sitepmap
         - change font awesome to verion 4.6.0 (included new accessiblilty icons)
         -header: delete gmpg and pingback links.
+    commit #16.5.6
+        -css: delete comment border (empty comment shows horizontal line), remove an !important, where not necessary
+        -header.php delete yoast breadcrumb. Change manduca_breadcrumb function, if necessary.
+        ==accessibility== add underline to widget links.
+        -remove login redirect after signup
+        ==accessibility==add icons instead of ascii.
+        
+        
